--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,8 @@
 .main-container {
   display: flex;
-
+  flex-wrap:wrap;
   font-family: 'poppins', sans-serif;
+  flex-direction: column;
 }
 
 header {
@@ -13,7 +14,7 @@ header {
 }
 
 .logo-content {
-  display: flex; 
+  display: flex;
   align-items: flex-start;
   justify-content: space-between;
 }
@@ -39,34 +40,42 @@ ul {
   list-style: none;
   display: flex;
   max-width: 350px;
-  max-width: 20px;
   width: 100%;
-  margin: 20px;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
+}
+li {
+  list-style: none;
 }
 
 .in-button {
   background-color: #BCD0E5;
   margin: 20px;
-
 }
 
 .up-button {
   background-color: #FF9900;
- 
 }
 
+.starter-block {
+position: fixed;
+display: inline-block;
+
+
+}
 .main-title {
   color: #2F281E;
   font-family:"poppins", sans-serif;
-  font-variant: bold;
-  font-weight: 518px;
-  font-size: 44;
-  line-height: 54;
-  letter-spacing: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-weight: bold;
+  font-size: 44px;
+  max-width: 518px;
+  width: 100%;
+  float: none;
+  /* height: 108px; */
+  /* line-height: 54px; */
+
+
+
 }
 
 .main-info {
@@ -74,17 +83,40 @@ ul {
   font-family:"poppins", sans-serif;
   font-variant: regular;
   font-weight: 518px;
-  font-size: 44;
-  line-height: 28;
+  font-size: 100%;
+  line-height: 28px;
   letter-spacing: 0px;
-  width: 458px;
+  max-width: 458px;
+  width: 100%;
   height: 95px;
-  box-sizing: border-box;
-  display: inline-block;
-
-/* float: none;
-line-height: 18px;
-position: static;
-/* z-index: auto;  */
+  /* box-sizing: border-box;
+  float: none;
+  line-height: 18px;
+  z-index: auto; */
+ 
 }
 
+/* .main-img {
+
+} */
+
+.buttons {
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  flex-wrap:wrap;
+}
+
+.get-startedbtn {
+  color: #FF9900;
+  width: 175px;
+  height: 53px;
+  max-width: 100%;
+  flex-wrap: wrap;
+}
+
+.watch-vidbtn {
+  flex-wrap:wrap;
+  width: 175px;
+  height: 53px;
+}
