--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,12 +2,16 @@
   display: flex;
   flex-wrap:wrap;
   font-family: 'poppins', sans-serif;
-  flex-direction: column;
+  flex-direction:column;
+  align-items:center;
 }
 
 header {
   display: flex;
+  flex-direction: row;
   min-height: 78px;
+  max-height: 496;
+  width: 1126px;
   justify-content: space-between;
   margin: 20px;
 
@@ -33,7 +37,7 @@ nav {
   margin-right:20px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
 }
 
 ul {
@@ -57,9 +61,15 @@ li {
   background-color: #FF9900;
 }
 
+
+--------------------------------------------
+
+
 .starter-block {
-position: fixed;
-display: inline-block;
+position:absolute;
+display: flex;
+flex-direction:column;
+margin-left: 20px;
 
 
 }
@@ -67,13 +77,14 @@ display: inline-block;
   color: #2F281E;
   font-family:"poppins", sans-serif;
   font-weight: bold;
-  font-size: 44px;
-  max-width: 518px;
-  width: 100%;
+  /* font-size: 44px; */
   float: none;
-  /* height: 108px; */
-  /* line-height: 54px; */
-
+  width: 100%;
+ max-width: 458px;
+  height: 108px;
+  line-height: 54px;
+justify-content: flex-start;
+align-items:flex-start;
 
 
 }
@@ -89,22 +100,15 @@ display: inline-block;
   max-width: 458px;
   width: 100%;
   height: 95px;
-  /* box-sizing: border-box;
+  box-sizing: border-box;
   float: none;
   line-height: 18px;
-  z-index: auto; */
- 
+  z-index: auto;
+  justify-content:flex-start;
 }
-
-/* .main-img {
-
-} */
 
 .buttons {
   display: flex;
-  justify-content:center;
-  align-items: center;
-  flex-wrap:wrap;
 }
 
 .get-startedbtn {
@@ -112,7 +116,6 @@ display: inline-block;
   width: 175px;
   height: 53px;
   max-width: 100%;
-  flex-wrap: wrap;
 }
 
 .watch-vidbtn {
@@ -120,3 +123,18 @@ display: inline-block;
   width: 175px;
   height: 53px;
 }
+/* .main-img {
+  display: flex;
+} */
+  
+
+ /* I need help moving the image to the left*/
+
+/* Iwant to go thrue the whole css incase ive missed 
+  any other options i could use here and remove whats unnecessary*/
+
+
+
+  ---------------------------------------------------
+
+  .seconde-block 
