--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,5 @@
 .main-container {
   display: flex;
-  flex-wrap:wrap;
   font-family: 'poppins', sans-serif;
   flex-direction:column;
   align-items:center;
@@ -37,7 +36,6 @@ nav {
   margin-right:20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 ul {
@@ -66,28 +64,30 @@ li {
 
 
 .starter-block {
-position:absolute;
-display: flex;
-flex-direction:column;
+display:flex;
+/* width: 1125px;
+height: 495px; */
 margin-left: 20px;
-
-
 }
-.main-title {
+
+.front-page {
+  display: flex;
   color: #2F281E;
   font-family:"poppins", sans-serif;
   font-weight: bold;
-  /* font-size: 44px; */
+  font-size: 44px;
   float: none;
   width: 100%;
- max-width: 458px;
+  max-width: 458px;
   height: 108px;
   line-height: 54px;
-justify-content: flex-start;
-align-items:flex-start;
-
-
+  justify-content: center;
 }
+
+.h2 {
+  width: 458px;
+  height: 108px;
+  }
 
 .main-info {
   color: #544837;
@@ -104,7 +104,7 @@ align-items:flex-start;
   float: none;
   line-height: 18px;
   z-index: auto;
-  justify-content:flex-start;
+  justify-content:center;
 }
 
 .buttons {
@@ -123,18 +123,158 @@ align-items:flex-start;
   width: 175px;
   height: 53px;
 }
-/* .main-img {
+
+
+ /* ------------------------------------------- */
+
+.seconde-block {
   display: flex;
-} */
-  
+  width: 2211px;
+  height: 543px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; 
+  }
 
- /* I need help moving the image to the left*/
+  .h3 {
+  justify-content: center;
+  font-size: 36px;
+  height: 108px;
+  max-width: 539px;
+  }
 
-/* Iwant to go thrue the whole css incase ive missed 
-  any other options i could use here and remove whats unnecessary*/
+  .box-row {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 204px;
+  max-width: 1095px;
+  margin: 20px;
+  } 
 
+  .box-box {
+  display:flex;
+  flex-direction:row;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 240px;
+  height: 178px;
+  margin-left: 20px;
+  padding-left: 20px;
+  }
 
+  .box-purple {
+  width: 240px;
+  height: 178px;
+  }
 
-  ---------------------------------------------------
+  .box-yellow {
+  width: 240px;
+  height: 178px;
+  }
 
-  .seconde-block 
+  .box-red {
+  width: 240px;
+  height: 178px;
+  }
+
+.box-blue {
+  font-size: 22px;
+  max-width: 240px;
+  width: 100%;
+  width: 240px;
+  height: 178px;
+} 
+
+.signupnow-btn {
+  color: #FF9900;
+  width: 175px;
+  height: 53px;
+}
+
+/* --------------------------------------*/
+
+.third-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 574px;
+  height: 1110px; */
+}
+
+.text-part {
+  display: flex;
+  flex-direction: column;
+  max-width: 456px;
+  height: 531px;
+  font-size: 16px;
+  justify-content: flex-start;
+
+}
+
+p {
+  font-size: 16px;
+}
+
+h4 {
+  display: flex;
+  font-size: 36px;
+}
+
+.text-bubble {
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* ------------------------------------*/
+
+.forth-block {
+  display: flex;
+  width: 1121px;
+  height: 521px;
+}
+
+.manager-part {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  max-width: 427px;
+  height: 486px;
+  font-size: 16px;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.check-list {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+
+}
+.check-one {
+  /* width: 385px;
+  height: 52px; */
+  margin-left: 20px;
+}
+.check-two {
+  margin-left: 20px;
+}
+
+.check-three {
+  margin-left: 20px;
+}
+
+/* -------------------------------------*/
+
+/* 
+- seconde block, button looks wierd 
+- third block, move photo to left
+- forth block, first text overlappin third last sentence
+- 
+*/
+
+.fifth-block {
+  display: flex;
+
+}
