--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,7 @@ ul {
   justify-content: space-around;
   align-items: center;
 }
+
 li {
   list-style: none;
 }
@@ -64,10 +65,11 @@ li {
 
 
 .starter-block {
-display:flex;
-/* width: 1125px;
-height: 495px; */
-margin-left: 20px;
+  display:flex;
+
+  /* width: 1125px;
+  height: 495px; */
+  margin-left: 20px;
 }
 
 .front-page {
@@ -134,16 +136,17 @@ margin-left: 20px;
   flex-direction: column;
   justify-content: space-between;
   align-items: center; 
-  }
+}
 
-  .h3 {
+.h3 {
   justify-content: center;
+  flex-wrap: wrap;
   font-size: 36px;
   height: 108px;
-  max-width: 539px;
-  }
+  width: 539px;
+}
 
-  .box-row {
+.box-row {
   display:flex;
   flex-direction: row;
   justify-content: space-between;
@@ -151,9 +154,9 @@ margin-left: 20px;
   height: 204px;
   max-width: 1095px;
   margin: 20px;
-  } 
+} 
 
-  .box-box {
+.box-box {
   display:flex;
   flex-direction:row;
   justify-content: space-between;
@@ -162,22 +165,22 @@ margin-left: 20px;
   height: 178px;
   margin-left: 20px;
   padding-left: 20px;
-  }
+}
 
-  .box-purple {
+.box-purple {
   width: 240px;
   height: 178px;
-  }
+}
 
-  .box-yellow {
+.box-yellow {
   width: 240px;
   height: 178px;
-  }
+ }
 
-  .box-red {
+.box-red {
   width: 240px;
   height: 178px;
-  }
+}
 
 .box-blue {
   font-size: 22px;
@@ -188,7 +191,8 @@ margin-left: 20px;
 } 
 
 .signupnow-btn {
-  color: #FF9900;
+  background-color: #FF9900;
+  color: white;
   width: 175px;
   height: 53px;
 }
@@ -199,8 +203,6 @@ margin-left: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* width: 574px;
-  height: 1110px; */
 }
 
 .text-part {
@@ -224,7 +226,8 @@ h4 {
 
 .text-bubble {
   display: flex;
-  justify-content: flex-end;
+  align-items: flex-end;
+
 }
 
 /* ------------------------------------*/
@@ -265,16 +268,78 @@ h4 {
   margin-left: 20px;
 }
 
+.laptop-guy {
+  display: flex;
+}
+
 /* -------------------------------------*/
 
-/* 
-- seconde block, button looks wierd 
-- third block, move photo to left
-- forth block, first text overlappin third last sentence
-- 
-*/
 
 .fifth-block {
   display: flex;
+  max-width: 609px;
+  height: 1110px;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.marketers {
+  display: flex;
+  flex-direction: column;
+  max-width: 486px;
+  height: 90px;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.screen-squares {
+  display: flex;
+  align-self: flex-end;
 
 }
+
+/* ----------------------------------------*/
+
+.last-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  max-width: 1109px;
+  width: 100%;
+  height: 308px;
+}
+
+.logo-foot {
+  align-self: first baseline;
+  justify-content: space-between;
+}
+
+/* .nav-answers {
+
+} */
+
+/* .legal-info {
+
+} */
+.search-bar {
+  width: 325px;
+  height: 48px;
+}
+.signupnow2-btn {
+  background-color: #FF9900;
+  color: white;
+  width: 131px;
+  height: 39px;
+}
+
+
+/* 
+- first block: title + text overlapps when i make the page smaller
+- seconde block: title
+ + sign up now-button needs rounded corners 
+- third block: move photo to left
+- forth block: first text overlappin third-blocks last sentence
+- fifth block: whole block all stretched out
+- last footer: dont know how to make the search-bar
+
+*/
